界面初步完成

--- a/src/style/scss/common.scss
+++ b/src/style/scss/common.scss
@@ -1,8 +1,6 @@
-//scss文件
 @import "./mixin";
 html,body{
-  background: #f5f5f5;
-  font-size: 14px;
+  font-size:14px;
 }
 
 body, div, span, header, footer, nav, section, aside, article, ul, dl, dt, dd, li, a, p, h1, h2, h3, h4,h5, h6, i, b, textarea, button, input, select, figure, figcaption, {
@@ -12,7 +10,6 @@ body, div, span, header, footer, nav, section, aside, article, ul, dl, dt, dd, l
   font-style: normal;
   text-decoration: none;
   border: none;
-  //color: #333;
   font-weight: normal;
   font-family: "Microsoft Yahei";
   box-sizing: border-box;
@@ -22,48 +19,77 @@ body, div, span, header, footer, nav, section, aside, article, ul, dl, dt, dd, l
     outline: none;
   }
 }
+
+html,body,#app{
+  height: 100%;
+  background-color: #eee;
+}
+
+
+
+/*子组件过度效果*/
+.router-slid-enter-active,.router-slid-leave-active{
+  transition: all 0.4s;
+}
+.router-slid-enter,.router-slid-leave-active{
+  transform: translateX(2rem);
+  opacity: 0;
+}
+//通用子路由页面样式
+.rating-page{
+  position: fixed;
+  top: 0.45rem;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #f5f5f5;
+  z-index: 204;
+  overflow-y: auto;
+  //padding-top: 1.95rem;
+  p, span, input{
+    font-family: Helvetica Neue,Tahoma,Arial;
+  }
+}
 //设置文字溢出
 .tdd{
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
 }
-.router-fade-enter-active,.router-fade-leave-active{
-  transition: opacity .3s;
+/*规格弹窗样式*/
+.shadow{
+  position: fixed;
+  top:0;
+  left:0;
+  bottom:0;
+  right:0;
+  background: rgba(0,0,0,.4);
+  z-index: 17;
 }
-.router-fade-enter,.router-fade-leave-active{
-  opacity: 0;
+/*fade切换*/
+.fade-choose-enter-active,.fade-choose-leave-active{
+  transition: opacity .5s;
 }
-.rating-page{
-  padding-top:.45rem;
+/*动画结束隐藏元素*/
+.fade-choose-leave,.fade-choose-leave-active{
+  display: none;
 }
-//通用向右箭头
-.arrow-right::after{
-  content: ' ';
-  display: inline-block;
-  border-right:1px solid #666;
-  border-bottom:1px solid #666;
-  @include wh(.1rem,.1rem);
-  -webkit-transform:translateY(-50%) rotateZ(-45deg);
-  -moz-transform:translateY(-50%) rotateZ(-45deg);
-  -ms-transform:translateY(-50%) rotateZ(-45deg);
-  -o-transform:translateY(-50%) rotateZ(-45deg);
-  transform:translateY(-50%) rotateZ(-45deg);
-  position: absolute;
-  right: .2rem;
-  top:50%;
+.btn-container {
+  margin: 0.15rem auto;
+  padding: 0 0.1rem;
+  .mint-button{
+    height:41px;
+  }
+}
+//顶部提示
+.tip_con{
+  width: 100%;
+  text-align: center;
+  background-color: rgba(0,0,0,.7);
+  .top_tip{
+    line-height: 50px;
+    color:#fff;
+  }
 }
 
-.btn {
-  @include ct;
-  right: .2rem;
-  padding: .03rem .1rem;
-  background-color: transparent;
-  border-radius: .03rem;
-  font-size: .13rem;
-}
-.btn.buy-btn{
-  border: 1px solid #ff4d64;
-  color: #ff4d64;
-  font-weight: bold;
-}
+
