--- a/src/style/scss/common.scss
+++ b/src/style/scss/common.scss
@@ -43,7 +43,7 @@ html,body,#app{
   right: 0;
   bottom: 0;
   background-color: #f5f5f5;
-  z-index: 204;
+  //z-index: 204;
   overflow-y: auto;
   //padding-top: 1.95rem;
   p, span, input{
