--- a/src/style/scss/mixin.scss
+++ b/src/style/scss/mixin.scss
@@ -1,8 +1,8 @@
 $blue: #26a2ff;
 $bc: #e4e4e4;
 $fc:#fff;
-/* 覆盖mint-ui的primary颜色，改为微信UI的绿色 */
-$color-primary: #4048E0;
+/* 覆盖mint-ui的primary颜色，这里采用京东红 */
+$color-primary: #FE142D;
 // 背景图片地址和大小
 @mixin bis($url) { 
 	background-image: url($url);
